# Telegram-Linux-Admin

./: .gitignore  Dockerfile  README.md  SECURITY.md  config.example.json  install.sh  linux_secure_manager.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-ci.yml  release-binaries.yml
go-telegram-admin/: Makefile  go.mod
go-telegram-admin/cmd/jules/: main.go
go-telegram-admin/pkg/commands/: commands.go  commands_test.go
go-telegram-admin/pkg/config/: config.go  config_test.go
go-telegram-admin/pkg/shell/: shell.go  shell_test.go
go-telegram-admin/pkg/system/: firewall.go  system_test.go  systemd.go  user.go
go-telegram-admin/pkg/telegram/: telegram.go  telegram_test.go
go-telegram-admin/pkg/utils/: utils_test.go
scripts/: rotate_key.py  setup.py  uninstall.sh
security/: update_manifest.json
src/: backup_manager.py  config.py  database.py  localization.py  logger_config.py  main.py  parse_mode.py  pqcrypto.py  security.py  ssh_manager.py  updater.py
tests/: conftest.py  temp_test_bug_fix.py  test_backup.py  test_bot_commands.py  test_bot_e2e.py  test_config.py  test_database.py  test_localization.py  test_main.py  test_security.py  test_service_management.py  test_ssh_manager.py  test_system_commands.py  test_updater.py
