[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-linux-admin"
version = "1.0.0"
authors = [
    { name="Your Name", email="you@example.com" },
]
description = "A Telegram bot for Linux server administration."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-telegram-bot[ext]",
    "asyncssh",
    "pytest",
    "pytest-asyncio",
    "tenacity",
    "async-timeout",
]

[project.scripts]
tla-bot = "src.main:main"
tla-bot-update = "src.updater:main"
